--- a/client/src/App.css
+++ b/client/src/App.css
@@ -746,3 +746,10 @@ input[type=number]::-webkit-outer-spin-button {
 .gotoTop svg{color: #fff !important; font-size: 25px !important;}
 
 .gotoTop.show{opacity: 1 !important; bottom: 12% !important;  transform: scale(1) !important;}
+
+
+.otpBox input{border: 1px solid rgba(0,0,0,0.3) !important; outline: none !important;
+  border-radius: 4px;}
+  .otpBox input:focus{border: 1px solid rgba(0,0,0,0.7) !important;}
+  
+  .otpPage .container{height:90vh; display: flex;}
