dele badge for brand and subcat

--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -671,6 +671,9 @@ body.dark .close_ svg{font-size: 22px; color: #000 !important; opacity: 0.7;}
 
 .cursor{cursor: pointer;}
 
+.badge {
+  color: black; 
+}
 
 
 .productZoom{ width: 100%; height: auto;  padding: 0px; overflow: hidden; border-radius: 15px;}
